fix overflow scroll bars

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -14,7 +14,8 @@
 
 pre
   display: block
-  overflow: scroll
+  overflow-y: hidden
+  overflow-x: scroll
   white-space: pre
   padding-left: 1rem
   background-color: var(--background-code-color)
